[package]
name = "bulkbro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
serde_json = "1.0.75"
reqwest = "0.11.9"
tokio-postgres = "0.7.5"
url = "2.2.2"

[dependencies.tokio]
version = "1.15.0"
features = ["full"]

[dependencies.rwcord]
path = "../rwcord"
